--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,12 @@ html {
   box-sizing: inherit;
 }
 
-html {
+html,
+body {
   min-height: 100vh;
 }
 
-body,
 #root {
-  height: 100%;
-}
-
-main {
-  padding: 30px;
-  background-color: #efefef;
-  min-height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
