--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
-html {
-  min-height: 100%;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
+  min-height: 100vh;
 }
 
-.view {
-  flex-grow: 1;
+#root {
+  height: 100%;
 }
